Add button zoom in and button zoom out

--- a/BTT/Building/index.html
+++ b/BTT/Building/index.html
@@ -5,11 +5,12 @@
 		<title>Building </title>
 		<link rel="stylesheet" type="text/css" href="index.css">
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 	</head>
 	<body>
 		<div class="button-group">
-			<button type="button" id="In" class="btn btn-outline-success">Zoom In</button>
-			<button type="button" id="Out" class="btn btn-outline-warning">Zoom Out</button>
+			<button type="button" id="In" class="btn btn-outline-success"><i class="fas fa-search-plus"></i> Zoom In</button>
+			<button type="button" id="Out" class="btn btn-outline-warning"><i class="fas fa-search-minus"></i> Zoom Out</button>
 		</div>
 		<div id="wrapper">
 			<div class="viewport">
